Fix user name input layout on iOS safari.

--- a/src/client/css/user.less
+++ b/src/client/css/user.less
@@ -15,9 +15,13 @@ div.user {
     }
     div.user-name-input {
         input.user-name-input {
+            width: 100%;
+            border-radius: 0px;
             border-top: none;
+            border-bottom: 1px solid gray;
             border-left: none;
             border-right: none;
+            padding: 0px;
             text-align: center;
             &:focus {
                 outline: none;
